[Fix] Horizontal overflow in footer(1)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,6 +78,7 @@ div.col-sm-3.base-map {
 	padding-left: 0;
 	padding-right: 0;
 	overflow: scroll;
+	overflow-x: hidden;
 }
 
 .base-footer p {
